# m8-py

./: .gitignore  CLAUDE.md  README.md  m8-tracker-composer.md  pyproject.toml
docs/plans/: 2026-02-26-m8py-design.md  2026-02-26-m8py-implementation.md
m8py/: __init__.py  io.py  validate.py
m8py/compose/: __init__.py  allocator.py  builder.py  declarative.py  notation.py  samples.py
m8py/display/: __init__.py  commands.py  formatters.py  names.py  render.py
m8py/format/: __init__.py  constants.py  errors.py  offsets.py  reader.py  writer.py
m8py/models/: __init__.py  chain.py  eq.py  fx.py  groove.py  instrument.py  midi.py  modulators.py  phrase.py  scale.py  settings.py  song.py  song_step.py  table.py  theme.py  version.py
re/: FINDINGS.md
tests/: test_fuzz.py  test_integration.py  test_io.py  test_matey_roundtrip.py  test_properties.py  test_smoke.py  test_validate.py
tests/fixtures/matey/: 303HACK.m8i  4OP-BASS.m8i  808 PLSTC.m8i  808ISH01.m8i  808SHAKE.m8i  808SHAKEBUZZ.m8i  ACCIARP2.m8i  ALIENTRAIN.m8i  ANIMA2-WB3.m8i  ANTHEMESQUE.m8i  ARP TBL SQRD.m8i  ARP=TNKLIES.m8i  AUTO MIN MAJ.m8i  B0XOFALIENS.m8i  (+261 more)
tests/test_compose/: test_allocator.py  test_builder.py  test_declarative.py  test_notation.py  test_samples.py
tests/test_display/: test_commands.py  test_names.py  test_render.py
tests/test_format/: test_constants.py  test_errors.py  test_offsets.py  test_reader.py  test_writer.py
tests/test_models/: test_instruments.py  test_modulators.py  test_settings.py  test_simple_models.py  test_song.py  test_song_structures.py  test_version.py
