[project]
name = "m8py"
version = "0.1.0"
description = "Python library for Dirtywave M8 tracker files"
requires-python = ">=3.11"

[project.optional-dependencies]
dev = ["pytest>=7.0", "hypothesis>=6.0", "ruff"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
